# ambedkargpt

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: buffer_merge.json  chunk_entities.json  chunks.json  community_summaries.json  entity_communities.json  entity_relations.json  knowledge_graph.pkl  paragraphs.json  segment_distances.npy  segment_embeddings.npy  sentences.json
src/: ambedkargpt.py  cli_commands.py  project_pipeline.py
src/chunking/: buffer_merge_results_embedder.py  buffer_merger.py  semantic_chunker.py
src/embeddings/: embedder.py
src/graph/: community_detector.py  entity_extractor.py  graph_builder.py  relationship_extractor.py  summarizer.py
src/ingest/: pdf_ingest.py
src/llm/: answer_generator.py
src/pipeline/: ambedkargpt.py
src/retrieval/: community_embeddings.py  global_search.py  local_search.py
src/utils/: constants.py
