[project]
name = "ambedkargpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "igraph>=1.0.0",
    "networkx>=3.6.1",
    "pdfminer-six>=20251107",
    "pypdf>=6.4.1",
    "sentence-transformers>=5.2.0",
    "setuptools>=80.9.0",
    "spacy>=3.8.11",
    "transformers>=4.57.3",
    "wheel>=0.45.1",
]
